# mushroom-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  prepare_data.py  pyproject.toml  requirements.txt  run_training.py
.dvc/: config
configs/: config.yaml  infer.yaml  model.yaml  preprocessing.yaml  training.yaml
logs/tensorboard/mushroom-classifier/mushroom-classifier/version_0/: events.out.tfevents.1748622543.DESKTOP-2U8T7EC.3128.0
logs/tensorboard/mushroom-classifier/mushroom-classifier/version_1/: events.out.tfevents.1748622585.DESKTOP-2U8T7EC.13732.0
logs/tensorboard/mushroom-classifier/mushroom-classifier/version_2/: events.out.tfevents.1748623822.DESKTOP-2U8T7EC.3804.0
logs/tensorboard/mushroom-classifier/mushroom-classifier/version_3/: events.out.tfevents.1748623889.DESKTOP-2U8T7EC.11184.0  hparams.yaml
logs/tensorboard/mushroom-classifier/mushroom-classifier/version_4/: events.out.tfevents.1748623952.DESKTOP-2U8T7EC.7384.0
logs/tensorboard/mushroom-classifier/version_0/: events.out.tfevents.1748708923.DESKTOP-2U8T7EC.13680.0  events.out.tfevents.1748710869.DESKTOP-2U8T7EC.13680.1  hparams.yaml
models/exported/: model.onnx
mushroom_classifier/: __init__.py  data.py  infer.py  model.py  train.py  utils.py
scripts/: convert_to_onnx.py  convert_to_tensorrt.py  direct_process.py  process_data.py  run_training.py  setup_data.py  setup_data_standalone.py  setup_triton_server.py  simple_convert_to_onnx.py  simple_convert_to_tensorrt.py  simple_inference.py  simple_train.py  start_mlflow_server.py
(+5 files in other folders)
